# opspilot-mvp

./: .gitignore  .pre-commit-config.yaml  DEMO_README.md  ENV_SETUP.md  GPT5_BUSINESS_STRATEGY_PROMPT.md  LICENSE  MVP.code-workspace  MVP_PLAN.md  OPSPILOT_CONTEXT.md  README.md  README_new.md  ROADMAP.md  SECURITY_NOTES.md  TRACKER.md  TROUBLESHOOTING.md  context.md  data_model_schemas.md  demo_features.py  docker-compose.yml  opspilot-backend-min.code-workspace  project_structure.md  quick_demo.py  requirements.txt
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
MVP/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  README.md  pyproject.toml  requirements-dev.txt
MVP/.github/workflows/: ci.yml
apps/web/: Dockerfile  Dockerfile.prod  README.md  index.html  nginx.conf  tailwind.config.js  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  routes.tsx
apps/web/src/components/: BuildBeacon.tsx  ErrorBoundary.tsx  FileDropzone.tsx  KPICard.tsx  ProtectedRoute.tsx  RequireAuth.tsx  StatusBadge.tsx  ThemeToggle.tsx  theme-provider.tsx
apps/web/src/components/layout/: AppLayout.tsx
apps/web/src/components/ui/: alert.tsx  chart.tsx
apps/web/src/pages/: Admin.tsx  AuditTrail.tsx  Dashboard.tsx  Demo.tsx  Exceptions.tsx  FileUpload.tsx  Index.tsx  Login.tsx  OtcProcessing.tsx  ReconSummary.tsx  Reconciliation.tsx  RunHistory.tsx  SpanAnalysis.tsx
artifacts/diagnostics/: system_baseline.txt
artifacts/e2e/e2e-smoke-login-→-navigate-to-demo/: error-context.md
backend/: Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_audit_headers.py  0002_add_audit_and_breaks.py  0003_file_registry.py  0004_recon_runs.py
backend/app/: anomaly_detection.py  api_anomalies.py  api_audit.py  api_auth.py  api_benchmark.py  api_breaks.py  api_demo.py  api_exceptions.py  api_ingestion.py  api_ml.py  api_ops.py  api_runs.py  config_loader.py  db.py  main.py  models.py  observability.py  root_cause.py  run_utils.py  schemas_cdm.py  settings.py  tasks.py
backend/app/audit/: log_helper.py  logger.py
backend/app/breaks/: sla.py
backend/app/demo/: orchestrator.py
backend/app/ingestion/: api.py  csv.py  excel.py  sftp.py
backend/app/margin/: impact.py  positions.py
backend/app/ml/: predict.py
backend/app/otc/: recon.py  schemas.py
backend/app/recon/: cluster.py  engine.py  nway.py
backend/app/reports/: exceptions_csv.py  regulatory.py
backend/app/risk/: span.py
backend/app/security/: __init__.py  auth.py  rate_limit.py
backend/tests/: conftest.py  test_auth.py  test_breaks.py  test_breaks_auth.py  test_export_exceptions.py  test_features.py  test_ingestion.py  test_ingestion_registry.py  test_ingestion_validation.py  test_otc_recon.py  test_protected_endpoints.py  test_recon.py  test_runs_api.py  test_security_protection.py  test_sla.py  test_tolerances.py  test_upload_dedupe.py
backend/tests/unit/: test_anomaly_detection.py  test_ml_api.py  test_root_cause.py
diagnostics/: ENV_RESOLUTION.md  FRONTEND_ROOT_CAUSE.md  SCAN_OLD_REFS.md  VERIFY_dev_2025-08-16T02-26-21-218Z.md  VERIFY_preview_2025-08-16T02-32-16-802Z.md
docs/: FEATURES.md  architecture.md
docs/ADR/: ADR-001_data-model.md  ADR-002_multitenancy.md  ADR-003_ai-usage.md  ADR-004_ingestion.md
e2e/: smoke.spec.ts
frontend/: Dockerfile  README.md  next.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(margin)/impact/: page.tsx
frontend/app/(recon)/clusters/: page.tsx
frontend/app/(recon)/nway/: page.tsx
frontend/app/(recon)/predicted/: page.tsx
frontend/app/(reports)/reg-pack/: page.tsx
frontend/app/(risk)/changes/: error.tsx  loading.tsx  page.tsx
frontend/app/(wizard)/demo/: page.tsx
frontend/app/api/hello/: route.ts
frontend/app/results/: page.tsx
frontend/app/upload/: page.tsx
infra/: README.md
infra/terraform/: main.tf
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/kms/: main.tf
infra/terraform/modules/s3/: main.tf  variables.tf
infra/terraform/modules/sqs/: main.tf
opspilot-mvp/: .gitignore  DEMO_README.md  GIT_SETUP.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  run-dev.ps1  setup.ps1
opspilot-mvp/.github/workflows/: ci.yml
opspilot-mvp/apps/api/: Dockerfile  Dockerfile.dev  alembic.ini  requirements.txt
opspilot-mvp/apps/api/alembic/: env.py
opspilot-mvp/apps/api/alembic/versions/: 001_initial_schema.py  002_add_product_model.py  004_add_exception_clustering_sla_fields.py  005_add_audit_lineage_tables.py
opspilot-mvp/apps/api/app/: main.py
opspilot-mvp/apps/api/app/audit/: audit_logger.py  lineage_tracker.py
opspilot-mvp/apps/api/app/config/: config_loader.py
opspilot-mvp/apps/api/app/core/: config.py  enums.py  logging.py
opspilot-mvp/apps/api/app/db/: session.py
opspilot-mvp/apps/api/app/exceptions/: clustering_analyzer.py
opspilot-mvp/apps/api/app/intelligence/: __init__.py
opspilot-mvp/apps/api/app/models/: __init__.py  audit.py  base.py  file.py  product.py  recon.py  span.py  trade.py
opspilot-mvp/apps/api/app/publication/: __init__.py
opspilot-mvp/apps/api/app/services/: enhanced_recon_service.py  margin_service.py  recon_service.py  span_service.py
opspilot-mvp/apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
opspilot-mvp/apps/frontend/src/: App.tsx
opspilot-mvp/apps/frontend/src/components/: ColumnMapper.tsx  DataGrid.tsx  KPICard.tsx  (+3 more)
opspilot-mvp/apps/web/: Dockerfile.dev
opspilot-mvp/infra/: .env.example  docker-compose.yml
opspilot-mvp/scripts/: demo_run.py  demo_seed.py  git_setup.ps1
opspilot-mvp/tests/e2e/: test_demo_flow.py
playwright-report/: index.html
scripts/: call_anomalies.ps1  call_demo_auto.ps1  call_exceptions.ps1  call_ml_admin.ps1  call_predictions.ps1  call_runs.ps1  demo_checklist.ps1  demo_doctor.py  purgeCDN.mjs  resolveEnv.mjs  scanOldRefs.mjs  test_login.py  verifyNewUI.mjs
tests/smoke/: test_api_smoke.py
(+40 files in other folders)
